--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "daisyui": "^2.15.2",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
