--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "aos": "^2.3.4",
     "daisyui": "^2.15.2",
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
